@@ -13,6 +13,8 @@
 
 - New: Added code of Theora video codec and OGG container (libtheora and libogg).
 
+- Fixed: Memory Leak (or rather memory not deallocated before program exit) (issue 169)
+
 
 --- Ver. 1.3.1 ---
 
